# InVirtuoLattice

./: .gitignore  README.md  evaluate.py  export_adapter.py  pyproject.toml  setup_lumi.md  train.py
artifacts/tokenizer/: smiles_new.json
backbone/: adapter.py  encoder.py
callbacks/: __init__.py  sanity_gate.py
configs/: train.yaml
configs/callbacks/: adapter.yaml  ebm.yaml
configs/data/: adapter.yaml  ebm.yaml
configs/experiment/: ebm_baseline.yaml
configs/logger/: csv.yaml
configs/model/: ebm.yaml
configs/paths/: default.yaml
data/: adapter.py  cluster_sampler.py  ebm.py
ebm/: __init__.py  dataset.py  head.py  precompute_bdb_zm.py  precompute_decoys.py
eval/: __init__.py  build_multiview_cache.py  encode_utils.py  ensemble_eval.py  latent_diagnostics.py  lit_pcba.py  metrics.py  sanity_check.py  val_alignment.py
eval/data/: bioisosteres.csv
inference/: __init__.py  predict.py  predict_ensemble.py
models/: builders.py  schedules.py
notebooks/: P10827-2_THA_HUMAN_Isoform_Alpha-1.fasta  P10828.fasta  chembl_decoys_thra_thrb.ipynb  chembl_decoys_thrb.ipynb  chembl_decoys_ws1v1_ws1v2_rapposelli_slim.parquet
preprocessing/: bindingdb.py  dude.py  lit_pcba.py  run_bindingdb.py  run_dude.py  run_preprocessing.py
protein/: encoder.py  precompute.py
report/: bibliography.bib  main.tex
report/figures/: mf_pcba_lattice_nesso_comparison.csv
scripts/: DATASETS.md  _litpcba_sep.py  aggregate_ablations.py  aggregate_nesso_ws1.py  diag_ebm_stage5.py  download_bindingdb.sh  download_qm9.sh  dump_no_ssl_adapter.py  plot_ensemble_scaling.py  plot_mf_pcba_comparison.py  plot_nesso_affinity_hist.py  plot_nesso_litpcba_metrics.py  plot_thrb_lattice_unidock.py  plot_thrb_ws2_histogram.py  prepare_mf_pcba_nesso_subset.py  run_nesso_litpcba_subsample.py  run_nesso_thra_ws.py  setup_container.sh  time_thrb_screen.py
scripts/data/: DATASETS.md  copy_lit_pcba.sh  download_bindingdb.sh  download_dude.sh  download_lit_pcba.sh  download_moses.sh  download_qm9.sh
scripts/slurm/: ablation_djepa_job.sh  common.sh  diag_hybrid_rank_trace.sh  diag_lejepa_rank_trace.sh  eval_mf_pcba_nesso_subset.sh  run_ablation_round.sh  run_component_ablations.sh  run_ensemble_scaling.sh  run_grid_protein_merge_ssl.sh  run_pipeline.sh  stage1_preprocess.sh  stage1b_precompute_conformers.sh  stage2_adapter_ssl_lejepa.sh  stage2_adapter_ssl_ntxent.sh  stage2_denoising_jepa.sh  stage2_ssl.sh  stage3_protein_precompute.sh  stage3_protein_precompute_esmc.sh  stage4_precompute_decoys.sh  stage4_precompute_decoys_lejepa.sh  stage4_precompute_decoys_ntxent.sh  stage5_ebm_train.sh  stage5_ebm_train_lejepa.sh  stage5_ebm_train_ntxent.sh  stage6_build_zm_cache.sh  stage6_ensemble_eval.sh  stage6_ensemble_scaling.sh  (+4 more)
tests/: smoke_both_pipelines.sh  test_adapter_zero_layers.py  test_bindingdb_ligand_views.py  test_checkpoint_dirs.py  test_checkpoint_loading.py  test_configs.py  test_denoising_jepa.py  test_embedding_store.py  test_encoder_3d_roundtrip.py  test_fragment_shuffle.py  test_fragment_view_integrity.py  test_imports.py  test_lit_pcba_mv_cache.py  test_molecules_brics.py  test_parity.py  test_smoke_pipeline_scripts.sh  test_ssl_loss.py  test_ssl_val_probes.py  test_view3d.py  test_wandb_code.py
training/: __init__.py  ssl_loss.py
utils/: __init__.py  misc.py
(+120 files in other folders)
